# nto-ai-25-26-final-baseline

./: .gitignore  BEST SOLUTION.ipynb  BEST_SOLUTION.ipynb  FINAL_STRONG_SOLUTION.ipynb  NOTEBOOK_CRITICAL_ERRORS.md  NTO Advanced.ipynb  ONBOARDING.md  README.md  SETUP.md  baseline.ipynb  claude.ipynb  kaggle_gpu_solution.py  main.py  notebook53a89a5943.ipynb  notebook635913d878 (1).ipynb  nto-ai-2026 (3).ipynb  nto-ai-2026 (6).ipynb  nto-ai-2026 (8).ipynb  nto-ai-advanced.ipynb  nto-ai-debug (2).ipynb  nto-ai-debug (7).ipynb  nto-ai-debug.ipynb  nto-claude-final.ipynb  nto_ai_2026 (4).py  nto_final_strong_solution (1).ipynb  nto_final_strong_solution_(1).ipynb  nto_final_strong_solution_(1).py  nto_final_ultra_solution.ipynb  nto_final_ultra_solution.py  pyproject.toml
configs/: base.yaml
configs/experiments/: high_recall.yaml
docs/: ARCHITECTURE_TWO_ZONE.md  PARTICIPANT_SURFACE.md
docs/baseline/: ONBOARDING.md  SETUP.md
notebooks/: EDA.ipynb  nto-ai-2026 (2).ipynb
src/: cli.py  pipeline.py
src/candidates/: __init__.py  base.py  global_popularity.py  user_author.py  user_genre_popularity.py
src/competition/: README.md  __init__.py  features.py  ranking.py
src/core/: artifacts.py  dataset.py  logging.py  metrics.py  progress.py  validate.py
src/io/: hashing.py  loaders.py
src/participants/: __init__.py  features.py  ranking.py  validation.py
src/pipeline/: __init__.py  models.py  orchestrator.py  runtime.py  stage_helpers.py
tests/: test_generators_contract.py  test_participant_surface.py  test_pipeline_smoke.py  test_submission_format.py
(+38 files in other folders)
